agrego formación y experiencia

--- a/index.html
+++ b/index.html
@@ -45,6 +45,20 @@
                     <li>Contacto: polett50@gmail.com</li>
                 </ul>
             </div>
+
+            <div>
+                <h3>Formación y Experiencia</h3>
+                TRADUCTORA INGLÉS-ESPAÑOL CON MENCIÓN EN NEGOCIOS INTERNACIONALES.
+                Universidad Tecnológica de Chile –INACAP Sede Concepción-Talcahuano. 
+                Licenciada en Lenguas y Letras.
+                
+                <h3>Cursos</h3>
+                <ol>
+                  <li>Cajero Administrativo Bancario, EME Capacitación, Concepción. </li>
+                  <li>Actualización en el Programa Excel para Exalumnos.</li>
+                </ol>
+
+            </div>
         </nav>
     </header>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
