--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
                 </ol>
 
             </div>
+
+            <footer> Barbara Urrutia. Todos los derechos reservados</footer>
         </nav>
     </header>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
