--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link " aria-current="page" href="#">Inicio</a>
+                            <a class="nav-link " aria-current="page" href="#datospersonales">Datos Personales</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Educación y experiencia</a>
+                            <a class="nav-link" href="#formación">Formación y Experiencia</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link " aria-disabled="true">Portafolio</a>
@@ -36,32 +36,44 @@
                     </ul>
                 </div>
             </div>
-
-            <div>
-                <h3>Datos Personales</h3>
-                <ul>
-                    <li>Nombre: Bárbara Urrutia</li>
-                    <li>Nacionalidad: Chilena</li>
-                    <li>Contacto: polett50@gmail.com</li>
-                </ul>
-            </div>
-
-            <div>
-                <h3>Formación y Experiencia</h3>
-                TRADUCTORA INGLÉS-ESPAÑOL CON MENCIÓN EN NEGOCIOS INTERNACIONALES.
-                Universidad Tecnológica de Chile –INACAP Sede Concepción-Talcahuano. 
-                Licenciada en Lenguas y Letras.
-                
-                <h3>Cursos</h3>
-                <ol>
-                  <li>Cajero Administrativo Bancario, EME Capacitación, Concepción. </li>
-                  <li>Actualización en el Programa Excel para Exalumnos.</li>
-                </ol>
-
-            </div>
-
-            <footer> Barbara Urrutia. Todos los derechos reservados</footer>
         </nav>
+        <div class="Profile mt-3 mb-3 pt-3 pb-3" id="profile">
+            <h3>Datos Personales</h3>
+            <ul>
+                <li>Nombre: Bárbara Urrutia</li>
+                <li>Nacionalidad: Chilena</li>
+                <li>Contacto: polett50@gmail.com</li>
+            </ul>
+        </div>
+
+        <div class="formación  mt-3 mb-3 pt-3 pb-3" id="formacion">
+            <h3>Formación y Experiencia</h3>
+
+            <p> TRADUCTORA INGLÉS-ESPAÑOL CON MENCIÓN EN NEGOCIOS INTERNACIONALES.</p>
+            <p> Universidad Tecnológica de Chile –INACAP Sede Concepción-Talcahuano. </p>
+            <p> Licenciada en Lenguas y Letras.</p>
+
+            <h3>Cursos</h3>
+            <ol>
+                <li>Cajero Administrativo Bancario, EME Capacitación, Concepción. </li>
+                <li>Actualización en el Programa Excel para Exalumnos.</li>
+            </ol>
+        <div class="portafolio mt-3 mb-3 pt-3 pb-3">
+            <h3>Portafolio</h3>
+            <lu>
+              <li>Curriculum en HTML</li>
+              <li>Landing Page</li>
+              <li>Iguana Page</li>
+              <li>Cuppon</li>
+              <li>Github</li>
+              <li>Github Pages</li>
+            </lu>
+        </div>
+
+        </div>
+
+        <footer> Barbara Urrutia. Todos los derechos reservados</footer>
+
     </header>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
