--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             <a class="nav-link" href="#formación">Formación y Experiencia</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " aria-disabled="true">Portafolio</a>
+                            <a class="nav-link " aria-disabled="true" href="pages/portafolio.html">Portafolio</a>
                         </li>
                     </ul>
                 </div>
