agrego columnas en portafolio

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link " aria-current="page" href="#datospersonales">Datos Personales</a>
+                            <a class="nav-link " aria-current="page" href="#profile">Datos Personales</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#formación">Formación y Experiencia</a>
+                            <a class="nav-link" href="#formacion">Formación y Experiencia</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link " aria-disabled="true" href="pages/portafolio.html">Portafolio</a>
@@ -37,7 +37,9 @@
                 </div>
             </div>
         </nav>
-        <div class="Profile mt-3 mb-3 pt-3 pb-3" id="profile">
+    </header>
+        
+    <div class="Profile mt-3 mb-3 pt-3 pb-3" id="profile">
             <h3>Datos Personales</h3>
             <ul>
                 <li>Nombre: Bárbara Urrutia</li>
@@ -46,7 +48,7 @@
             </ul>
         </div>
 
-        <div class="formación  mt-3 mb-3 pt-3 pb-3" id="formacion">
+        <div class="formacion  mt-3 mb-3 pt-3 pb-3" id="formacion">
             <h3>Formación y Experiencia</h3>
 
             <p> TRADUCTORA INGLÉS-ESPAÑOL CON MENCIÓN EN NEGOCIOS INTERNACIONALES.</p>
@@ -74,7 +76,7 @@
 
         <footer> Barbara Urrutia. Todos los derechos reservados</footer>
 
-    </header>
+   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
