agrego imagen proyecto 1

--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -38,10 +38,10 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                Descripción 
+                Proyecto 1: Mi Curriculum
             </div>
             <div class="col">
-                imagen
+                <img src="/assets/img/Pant Curriculum 2025.png">
             </div>
         </div>
         <div class="row">
