agrego imagenes de los proyectos

--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -46,38 +46,38 @@
         </div>
         <div class="row">
             <div class="col">
-                Descripción 
+                Protecto 2 
             </div>
             <div class="col">
-                imagen
-            </div>
-        </div> <div class="row">
-            <div class="col">
-                Descripción 
-            </div>
-            <div class="col">
-                imagen
+                <img src= "/assets/img/Pant Landing Page.png" >
             </div>
         </div> <div class="row">
             <div class="col">
-                Descripción 
+                Proyecto 3 
             </div>
             <div class="col">
-                imagen
-            </div>
-        </div> <div class="row">
-            <div class="col">
-                Descripción 
-            </div>
-            <div class="col">
-                imagen
+                <img src= "/assets/img/Pant Iguana Page.png" >
             </div>
         </div> <div class="row">
             <div class="col">
-                Descripción 
+                Proyecto 4
             </div>
             <div class="col">
-                imagen
+                <img src= "/assets/img/Pant Cuppon.png">
+            </div>
+        </div> <div class="row">
+            <div class="col">
+                Proyecto 5 
+            </div>
+            <div class="col">
+                <img src= "/assets/img/Panta github.jpg">
+            </div>
+        </div> <div class="row">
+            <div class="col">
+                Proyecto 6 
+            </div>
+            <div class="col">
+                <img src= >
             </div>
         </div>
 
