modificando la hoja de estilo

--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/css/style.css">
@@ -22,19 +23,22 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="#datospersonales">Datos Personales</a>
+                        <a class="nav-link " aria-current="page" href="#">Datos Personales</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#formación">Formación y Experiencia</a>
+                        <a class="nav-link" href="#">Formación</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " aria-disabled="true" href="pages/portafolio.html">Portafolio</a>
+                        <a class="nav-link" href="#">Experiencia</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " aria-disabled="true"> Portafolio</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <h3> Mis Proyectos</h3>
+    <h3 class="mb-3 mt-3"> Mis Proyectos</h3>
     <div class="container">
         <div class="row">
             <div class="col">
@@ -46,45 +50,52 @@
         </div>
         <div class="row">
             <div class="col">
-                Protecto 2 
+                Proyecto 2: Landing Page 
             </div>
             <div class="col">
                 <img src= "/assets/img/Pant Landing Page.png" >
             </div>
         </div> <div class="row">
             <div class="col">
-                Proyecto 3 
+                Proyecto 3: Iguana Page
             </div>
             <div class="col">
                 <img src= "/assets/img/Pant Iguana Page.png" >
             </div>
         </div> <div class="row">
             <div class="col">
-                Proyecto 4
+                Proyecto 4: Cuppon
             </div>
             <div class="col">
                 <img src= "/assets/img/Pant Cuppon.png">
             </div>
         </div> <div class="row">
             <div class="col">
-                Proyecto 5 
+                Proyecto 5: Github
             </div>
             <div class="col">
                 <img src= "/assets/img/Panta github.jpg">
             </div>
         </div> <div class="row">
             <div class="col">
-                Proyecto 6 
+                Proyecto 6: Github Pages 
             </div>
             <div class="col">
                 <img src= >
             </div>
         </div>
 
+        <footer>
+            <p> <i class="fa-regular fa-copyright"> </i> Bárbara Urrutia. Todos los derechos reservados 2025.</i></p>
+    
+        </footer>
+    
+
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
+
 </body>
 
 </html>
