--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cv-pruebafinal</title>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -13,10 +13,10 @@
 
 <body>
     <header>
-        <h1>Bienvenido a mi perfil profesional</h1>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <h1 class="titulo mb-3 mt-3 ">Bienvenido a mi perfil profesional</h1>
+        <nav class="navbar navbar-expand-lg bg-body">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Barbara Urrutia</a>
+                <a class="navbar-brand" href="#profesion">Barbara Urrutia</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -28,7 +28,10 @@
                             <a class="nav-link " aria-current="page" href="#profile">Datos Personales</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#formacion">Formación y Experiencia</a>
+                            <a class="nav-link" href="#formacion">Formación </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#experiencia">Experiencia</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link " aria-disabled="true" href="pages/portafolio.html">Portafolio</a>
@@ -38,8 +41,10 @@
             </div>
         </nav>
     </header>
-        
-    <div class="Profile mt-3 mb-3 pt-3 pb-3" id="profile">
+
+    <main>
+
+        <div class="Profile mt-3 mb-3 pt-3 pb-3" id="profile">
             <h3>Datos Personales</h3>
             <ul>
                 <li>Nombre: Bárbara Urrutia</li>
@@ -48,35 +53,48 @@
             </ul>
         </div>
 
-        <div class="formacion  mt-3 mb-3 pt-3 pb-3" id="formacion">
-            <h3>Formación y Experiencia</h3>
-
+        <div class="profesion" id="profesion">
             <p> TRADUCTORA INGLÉS-ESPAÑOL CON MENCIÓN EN NEGOCIOS INTERNACIONALES.</p>
-            <p> Universidad Tecnológica de Chile –INACAP Sede Concepción-Talcahuano. </p>
-            <p> Licenciada en Lenguas y Letras.</p>
-
-            <h3>Cursos</h3>
-            <ol>
-                <li>Cajero Administrativo Bancario, EME Capacitación, Concepción. </li>
-                <li>Actualización en el Programa Excel para Exalumnos.</li>
-            </ol>
-        <div class="portafolio mt-3 mb-3 pt-3 pb-3">
-            <h3>Portafolio</h3>
-            <lu>
-              <li>Curriculum en HTML</li>
-              <li>Landing Page</li>
-              <li>Iguana Page</li>
-              <li>Cuppon</li>
-              <li>Github</li>
-              <li>Github Pages</li>
-            </lu>
         </div>
 
+        <div>
+            <div class="formacion mb-3 mt-3" id="formacion">
+                <h3>Formación</h3>
+                <p> Universidad Tecnológica de Chile –INACAP Sede Concepción-Talcahuano. </p>
+                <p> Licenciada en Lenguas y Letras.</p>
+            </div>
+
+            <div class="experiencia" id="experiencia"> <h3>Experiencia</h3>
+
+            <p>Traducción del libro “NOLS Wilderness Medicine”</p>
+            <p>Aplicación de todos los conocimientos y habilidades adquiridas en los años de preparación de la carrera,
+                entre ellos, responsabilidad, puntualidad, iniciativa, y creatividad, además del uso de herramientas
+                tecnológicas. </p>
+
+            <div class="portafolio mt-3 mb-3 pt-3 pb-3">
+                <h3>Portafolio</h3>
+                <p> Aquí encontrarás algunos de los proyectos que he desarrollado hasta ahora en el transcurso de mi
+                    formación como desarrollador web full stack java script en Desafio Latam.</p>
+                <lu>
+                    <li>Curriculum en HTML</li>
+                    <li>Landing Page</li>
+                    <li>Iguana Page</li>
+                    <li>Cuppon</li>
+                    <li>Github</li>
+                    <li>Github Pages</li>
+                </lu>
+            </div>
+
         </div>
+    </main>
 
-        <footer> Barbara Urrutia. Todos los derechos reservados</footer>
 
-   
+    <footer>
+        <p> <i class="fa-regular fa-copyright"> </i> Bárbara Urrutia. Todos los derechos reservados 2025.</i></p>
+
+    </footer>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
