--- a/pages/fork.html
+++ b/pages/fork.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1> Link de los fork que realicé a dos compañeros </h1>
+    <h1> Links de los fork que realicé a dos compañeros </h1>
 
     <p> Usuario 1: Marisela Acevedo
 
