--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="portafolio mt-3 mb-3 pt-3 pb-3">
                 <h3>Portafolio</h3>
                 <p> Aquí encontrarás algunos de los proyectos que he desarrollado hasta ahora en el transcurso de mi
-                    formación como desarrollador web full stack java script en Desafio Latam.</p>
+                    formación como desarrollador web full stack java script en Desafío Latam.</p>
                 <lu>
                     <li>Curriculum en HTML</li>
                     <li>Landing Page</li>
