agrego imagen proyecto 6

--- a/pages/fork.html
+++ b/pages/fork.html
@@ -10,21 +10,26 @@
 <body>
     <h1> Links de los fork que realicé a dos compañeros </h1>
 
-    <p> Usuario 1: Marisela Acevedo
-
-        Repositorio Original: https://github.com/mariselacevedor/mariselacevedor.github.io
-
-        Mi repositorio: https://github.com/BarbaraPo/mariselacevedor.github.io
-    </p>
-    <p> Usuario 2: Cristobal Millalonco
-
-        Repositorio Original: https://github.com/cmillal/cmillal.github.io
-
-        Mi repositorio: https://github.com/BarbaraPo/cmillal.github.io
+    <div> Usuario 1: Marisela Acevedo
+        <p>
+            Repositorio Original: https://github.com/mariselacevedor/mariselacevedor.github.io
+        </p>
+        <p>
+            Mi repositorio: https://github.com/BarbaraPo/mariselacevedor.github.io
+        </p>
 
 
-    </p>
+    </div>
 
+    <div> Usuario 2: Cristobal Millalonco
+        <p>
+            Repositorio Original: https://github.com/cmillal/cmillal.github.io
+        </p>
+
+        <p>
+            Mi repositorio: https://github.com/BarbaraPo/cmillal.github.io
+        </p>
+    </div>
 </body>
 
 </html>
