--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -81,7 +81,7 @@
                 Proyecto 6: Github Pages 
             </div>
             <div class="col">
-                <img src= >
+                <img src="/assets/img/Panta curriculum.jpg">
             </div>
         </div>
 
